--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react",
+  "name": "bizbrand",
   "private": true,
-  "homepage": "https://Lord-Gabe.github.io/Landing_page",
+  "homepage": "https://Lord-Gabe.github.io/bizbrand",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
